# css-minify

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  Readme.md
.github/workflows/: clippy.yml  minifier-web.yml  minifier.yml  minify.yml  rust.yml
css-minifier/: Cargo.toml  LICENSE-APACHE  Readme.md
css-minifier-web/: Cargo.toml  Readme.md  build.rs
css-minifier-web/src/: main.rs  styles.rs
css-minifier-web/static/: main.css
css-minifier-web/templates/: index.hbs
css-minifier/src/: main.rs
css-minify/: Cargo.toml  LICENSE-MIT  Readme.md
css-minify-bin/: Cargo.toml
css-minify-bin/src/: main.rs
css-minify-lib/: Cargo.toml
css-minify-lib/src/: structure.rs
css-minify-lib/src/optimizations/: color.rs  media.rs  merge_blocks.rs  merge_m_n_p.rs  merge_media.rs  merge_shorthand.rs  mod.rs  transformer.rs
css-minify-lib/src/parsers/: at.rs  block.rs  css_entity.rs  media.rs  mod.rs  selector.rs  useless.rs
css-minify/src/: lib.rs  structure.rs
css-minify/src/optimizations/: color.rs  font.rs  merge_blocks.rs  merge_m_n_p.rs  merge_media.rs  merge_shorthand.rs  mod.rs  transformer.rs
css-minify/src/parsers/: at.rs  block.rs  css_entity.rs  mod.rs  parameters.rs  selector.rs  utils.rs
src/: lib.rs  structure.rs
src/optimizations/: merge_m_n_p.rs  mod.rs  transformer.rs
src/parsers/: block.rs  mod.rs  parameters.rs  selector.rs  useless.rs
