[package]
name = "css-minifier-web"
version = "0.1.1"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
css-minify = { version = "0.2", path = "../css-minify" }
actix-web = { version = "4.0.0-beta.1" }
actix-files = "0.6.0-beta.1"
yarte = "0.14"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.11"