[package]
name = "css-minifier-web"
version = "0.5.1"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
css-minify = { version = "0.5", path = "../css-minify" }
actix-web = { version = "4" }
actix-files = "0.6"
yarte = "0.15"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
build_const = "0.2.2"
css-minify = { version = "0.5", path = "../css-minify" }