[package]
name = "css-minifier"
version = "0.2.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"
description = "CLI wrapper for css-minify library"
keywords = ["cli", "minify", "minifier", "css", "terminal"]
categories = ["command-line-interface", "command-line-utilities"]
repository = "https://github.com/Mnwa/css-minify"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"css-minify" = { version = "0.2", path = "../css-minify" }
clap = "3.0.0-beta.2"
shellexpand = "2.1"
indoc = "1.0"