[package]
name = "css-minify-bin"
version = "0.1.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"css-minify-lib" = { version = "0.1", path = "../css-minify-lib" }
clap = "3.0.0-beta.2"
shellexpand = "2.1"