[package]
name = "css-minify"
version = "0.1.0"
authors = ["Mnwa <mihan@panfilov.biz>"]
edition = "2018"
description = "CSS parser and minificator based on nom"
keywords = ["minify", "minifier", "css", "optimization", "parser"]
categories = ["parser-implementations", "parsing"]
documentation = "https://docs.rs/css-minify"
repository = "https://github.com/Mnwa/css-minify"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
derive_more = "0.99"
indexmap = "1"